--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         {{pron_2s_subjective(gender)}} absolutely hated
         <span class="madlib">{{ml('tedious_task')}}</span> and
         <span class="madlib">{{ml('dirty_task')}}</span>. So,
-        <span class="madlib">{{ml(nameKey(gender))}}</span> met with life
-        mentor, {{pron_2s_genetive(gender)}}
+        <span class="madlib">{{ml(nameKey(gender))}}</span> met with
+        {{pron_2s_genetive(gender)}} life mentor,
         <span class="madlib">{{ml('celebrity')}}</span>,
         who told {{pron_2s_objective(gender)}} to learn how to
         <span class="madlib">{{ml('useless_skill')}}</span> with Thinkful.
